# ai-assistant-showcase

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f1407e501ff8_create_tenant_catalog_chatsession_.py
backend/app/: main.py
backend/app/commands/: clear_postgres.py  clear_qdrant.py  import_catalog.py  run_telegram.py
backend/app/core/: config.py  dependencies.py  logging.py
backend/app/db/: enums.py  models.py  postgres.py  qdrant.py
backend/app/modules/catalog/: parser.py  service.py  types.py
backend/app/modules/chat/: memory.py  router.py  schemas.py  service.py
backend/app/modules/llm/: base.py  factory.py  litellm_provider.py
backend/app/modules/rag/: embedder.py  indexer.py  pipeline.py  retriever.py
backend/app/modules/telegram/: bot.py  dispatcher.py
backend/core/: config.py
backend/tests/: conftest.py
backend/tests/api/: test_main.py
backend/tests/unit/catalog/: test_parser.py  test_service.py
backend/tests/unit/chat/: test_chat_service.py
backend/tests/unit/core/: test_config.py
backend/tests/unit/db/: test_models.py  test_postgres.py  test_qdrant.py
backend/tests/unit/llm/: test_factory.py  test_litellm_provider.py
backend/tests/unit/rag/: test_embedder.py  test_indexer.py  test_pipeline.py  test_retriever.py
backend/tests/unit/telegram/: test_dispatcher.py
data/: example_catalog.csv
scripts/: init-env.sh
widget/: index.html  widget.js
