[project]
name = "ai-assistant-showcase"
version = "0.1.0"
description = "AI assistant for product and FAQ consultations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "alembic",
    "asyncpg[binary]",
    "psycopg2-binary",
    "pydantic-settings",
    "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "httpx", "ruff", "faker"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["*/__init__.py", "tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E402"]
"tests/conftest.py" = ["F403"]

[tool.alembic]
script_location = "alembic"
prepend_sys_path = ["."]
